--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^4.1.0",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.1",
+    "framer-motion": "^12.4.4",
     "next": "15.1.1",
     "postcss": "8.4.49",
     "react": "19.0.0",
