--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.1",
     "framer-motion": "^12.4.4",
+    "js-cookie": "^3.0.5",
     "next": "15.1.1",
     "postcss": "8.4.49",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-social-icons": "^6.22.0",
     "reflect-metadata": "^0.2.2",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.2",
     "zustand": "^5.0.2"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.6"
   }
 }
